Standardise bibtex references

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -33,7 +33,7 @@ sequencing.
 information (such as phylogenetic trees and sample hierarchies) and
 reference sequences.
 
-[`MultiAssayExperiment`] (`MAE`) [@MultiAssayExperiment2017] provides an organized way to bind several different data
+[`MultiAssayExperiment`] (`MAE`) [@Ramos2017] provides an organized way to bind several different data
 structures together in a single object. For example, we can bind
 microbiome data (in `TreeSE` format) with metabolomic profiling data
 (in `SE`) format, with shared sample metadata. This is convenient and
@@ -504,7 +504,7 @@ help(GlobalPatterns)
 
 [ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html) 
 provides a variety of data resources, including the
-microbiomeDataSets package [@hub2021; @microlahti2021].
+microbiomeDataSets package [@Morgan2021; @microlahti2021].
 
 A table of the available data sets is available through the `availableDataSets`
 function.
