--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -43,10 +43,10 @@ devtools::install_github("microbiome/mia")
 Some of the R packages supporting the framework include:
 
 - [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
-- [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@miaviz2022]
+- [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@Ernst2022]
 - [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@miaSim2021]
 - [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@miaTime2021]
-- philr (external, @philr2017)
+- philr (external, @Silverman2017)
 
 
 
