--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -223,7 +223,7 @@ pheatmap(mat, annotation_row = taxa_clusters,
 
 In addition to _pheatmap_ package, there are also other packages that
 provide functions for more complex heatmaps, such as _iheatmapr_
-and ComplexHeatmap [@iheat2017; @gu2016complex].
+and ComplexHeatmap [@Schep2017; @Gu2016].
 
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
 package provides wrapper for _ComplexHeatmap_.
