--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -10,8 +10,8 @@ The idea is to find clusters where subset of features/samples share similar patt
 over samples/features. 
 
 There are multiple biclustering packages available, In this example, we use following methods
--   biclust [@biclust2021]
--   cobiclust [@aubert2021model]
+-   biclust [@Kaiser2021]
+-   cobiclust [@Aubert2021]
 
 _cobiclust_ is especially developed for microbiome data whereas _biclust_ is more
 general method. In this section, we show three different cases and example 
