--- a/97_interactive_3d_plots.Rmd
+++ b/97_interactive_3d_plots.Rmd
@@ -19,7 +19,7 @@ knitr::knit_hooks$set(webgl = hook_webgl)
 ```
 
 
-In this section we make a 3D version of the earlier  Visualizing the most dominant genus on PCoA (see \@ref(quality-control)), with the help of the plotly [@plotly2020].
+In this section we make a 3D version of the earlier  Visualizing the most dominant genus on PCoA (see \@ref(quality-control)), with the help of the plotly [@Sievert2020].
 
 ```{r, message=FALSE, warning=FALSE}
 # Installing the package
