--- a/book.bib
+++ b/book.bib
@@ -8,7 +8,7 @@
   url =		 {https://bioconductor.org/books/release/OSCA/}
 }
 
-@Article{Amezquita2020natmeth,
+@Article{Amezquita2020,
   author =	 {Robert A. Amezquita and Aaron T.L. Lun and Etienne
                   Becht and Vince J. Carey and Lindsay N. Carpp and
                   Ludwig Geistlinger and Federico Marini and Kevin
@@ -75,7 +75,7 @@
 }
 
 @article{Chao1984,
-  author =	 {Chao A},
+  author =	 {A Chao},
   title =	 {Non-parametric estimation of the number of classes
                   in a population},
   journal =	 {Scandinavian Journal of Statistics},
@@ -87,7 +87,7 @@
 }
 
 @article{Chao1992,
-  author =	 {Chao A and Lee SM},
+  author =	 {A Chao and SM Lee},
   title =	 {Estimating the number of classes via sample
                   coverage},
   journal =	 {Journal of the American statistical Association},
@@ -100,10 +100,10 @@
   year =	 1992
 }
 
-@Article{DECIPHER2016,
+@Article{Wright2016,
   title =	 {Using DECIPHER v2.0 to Analyze Big Biological
                   Sequence Data in R},
-  author =	 {Erik S. Wright},
+  author =	 {ES Wright},
   journal =	 {The R Journal},
   year =	 2016,
   volume =	 8,
@@ -135,7 +135,7 @@
   doi =		 {10.1371/journal.pcbi.1002687}
 }
 
-@Article{GenomicRanges2013,
+@Article{Lawrence2013,
   title =	 {Software for Computing and Annotating Genomic
                   Ranges},
   author =	 {Michael Lawrence and Wolfgang Huber and Herv\'e
@@ -207,7 +207,7 @@
                   {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html}
 }
 
-@Article{IRanges2013,
+@Article{LawrenceHuber2013,
   title =	 {Software for Computing and Annotating Genomic
                   Ranges},
   author =	 {Michael Lawrence and Wolfgang Huber and Herv\'e
@@ -253,8 +253,8 @@
 }
 
 @article{Lahti2014,
-  author =	 {Leo Lahti and Jarkko Salojärvi and Anne Salonen and
-                  Marten Scheffer and Willem M. de Vos},
+  author =	 {L Lahti and JSalojärvi and A Salonen and
+                  M Scheffer and WM de Vos},
   title =	 {Tipping elements in the human intestinal ecosystem},
   journal =	 {Nature Communications},
   volume =	 2014,
@@ -265,7 +265,7 @@
 }
 
 @Article{Lahti2021bioc,
-  author =	 {Leo Lahti, Felix G.M. Ernst, Sudarshan A. Shetty and
+  author =	 {L Lahti, F G.M. Ernst, S A. Shetty and
                   others},
   title =	 {Microbiome data science in the {\it
                   SummarizedExperiment} universe},
@@ -278,7 +278,7 @@
 }
 
 @Book{McElreath2020,
-  author =	 {Richard McElreath},
+  author =	 {R McElreath},
   title =	 {Statistical Rethinking},
   publisher =	 {Chapman and Hall/CRC},
   year =	 2020,
@@ -287,8 +287,7 @@
 }
 
 @article{McInnes2018,
-  author =	 {{McInnes}, Leland and {Healy}, John and {Melville},
-                  James},
+  author =	 {McInnes, L and Healy, J and Melville, J},
   title =	 "{UMAP: Uniform Manifold Approximation and Projection
                   for Dimension Reduction}",
   journal =	 {arXiv e-prints},
@@ -298,7 +297,7 @@
 }
 
 @article{McMurdie2013,
-  author =	 {Paul J McMurdie and Susan Holmes},
+  author =	 {PJ McMurdie and S Holmes},
   title =	 {{\it phyloseq:} An R Package for Reproducible
                   Interactive Analysis and Graphics of Microbiome
                   Census Data},
@@ -340,7 +339,7 @@
   keywords =	 {bioscience}
 }
 
-@Article{MultiAssayExperiment2017,
+@Article{Ramos2017,
   title =	 {Software For The Integration Of Multi-Omics
                   Experiments In Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
@@ -381,7 +380,7 @@
 }
 
 @article{Pons2006,
-  author =	 {Pons, Pascal and Latapy, Matthieu},
+  author =	 {Pons, P and Latapy, M},
   year =	 2006,
   month =	 01,
   pages =	 {191-218},
@@ -707,7 +706,7 @@
   keywords =	 {review}
 }
 
-@Article{SingleCellExperiment2020,
+@Article{Lun2020,
   title =	 {Orchestrating single-cell analysis with
                   Bioconductor},
   author =	 {Robert Amezquita and Aaron Lun and Etienne Becht and
@@ -762,7 +761,7 @@
   year =	 1960
 }
 
-@Article{alde2016,
+@Article{Gloor2016,
   title =	 {Displaying Variation in Large Datasets: a Visual
                   Summary of Effect Sizes},
   author =	 {Gregory B. Gloor and Jean M. Macklaim and Andrew
@@ -786,11 +785,10 @@
   url =		 {https://www.nature.com/articles/s41467-020-17041-7},
 }
 
-@article{aubert2021model,
+@article{Aubert2021,
   title =	 {Model-based biclustering for overdispersed count
                   data with application in microbial ecology},
-  author =	 {Aubert, Julie and Schbath, Sophie and Robin,
-                  St{\'e}phane},
+  author =	 {Aubert, Julie and Schbath, Sophie and Robin, St{\'e}phane},
   journal =	 {Methods in Ecology and Evolution},
   volume =	 12,
   number =	 6,
@@ -799,7 +797,7 @@
   publisher =	 {Wiley Online Library}
 }
 
-@Manual{biclust2021,
+@Manual{Kaiser2021,
   title =	 {biclust: BiCluster Algorithms},
   author =	 {Sebastian Kaiser and Rodrigo Santamaria and Tatsiana
                   Khamiakova and Martin Sill and Roberto Theron and
@@ -810,10 +808,10 @@
   url =		 {https://CRAN.R-project.org/package=biclust},
 }
 
-@Book{bookdown2016,
+@Book{Xie2016,
   title =	 {bookdown: Authoring Books and Technical Documents
                   with {R} Markdown},
-  author =	 {Yihui Xie},
+  author =	 {Y Xie},
   publisher =	 {Chapman and Hall/CRC},
   address =	 {Boca Raton, Florida},
   year =	 2016,
@@ -832,14 +830,14 @@
   publisher =	 {Faculty of 1000 Ltd}
 }
 
-@techreport{chambers2006s4,
+@techreport{Chambers2006,
   title =	 {How s4 methods work},
   author =	 {Chambers, JM},
   year =	 2006,
   institution =	 {Technical report}
 }
 
-@book{chambers2008software,
+@book{Chambers2008,
   title =	 {Software for data analysis: programming with R},
   author =	 {Chambers, John M},
   volume =	 2,
@@ -847,7 +845,7 @@
   publisher =	 {Springer}
 }
 
-@Manual{corncob2021,
+@Manual{Martin2021,
   title =	 {corncob: Count Regression for Correlated
                   Observations with the Beta-Binomial},
   author =	 {Bryan D Martin and Daniela Witten and Amy D Willis},
@@ -856,7 +854,7 @@
   url =		 {https://CRAN.R-project.org/package=corncob},
 }
 
-@Article{dada22016,
+@Article{Callahan2016dada,
   title =	 {DADA2: High-resolution sample inference from
                   Illumina amplicon data},
   author =	 {Benjamin J Callahan and Paul J McMurdie and Michael
@@ -869,7 +867,7 @@
   doi =		 {10.1038/nmeth.3869},
 }
 
-@Article{deseq2014,
+@Article{Love2014,
   title =	 {Moderated estimation of fold change and dispersion
                   for RNA-seq data with DESeq2},
   author =	 {Michael I. Love and Wolfgang Huber and Simon Anders},
@@ -881,7 +879,7 @@
   pages =	 550,
 }
 
-@Article{edger2016,
+@Article{Chen2016,
   author =	 {Yunshun Chen and Aaron A T Lun and Gordon K Smyth},
   title =	 {From reads to genes to pathways: differential
                   expression analysis of RNA-Seq experiments using
@@ -893,7 +891,7 @@
   doi =		 {10.12688/f1000research.8987.2},
 }
 
-@Article{fido2019,
+@Article{Silverman2019,
   title =	 {Bayesian Multinomial Logistic Normal Models through
                   Marginally Latent Matrix-T Processes},
   author =	 {Justin D Silverman and Kim Roche and Zachary C
@@ -910,7 +908,7 @@
   publisher =	 {CRC Press}
 }
 
-@article{gu2016complex,
+@article{Gu2016,
   title =	 {Complex heatmaps reveal patterns and correlations in
                   multidimensional genomic data},
   author =	 {Gu, Zuguang and Eils, Roland and Schlesner,
@@ -923,7 +921,7 @@
   publisher =	 {Oxford University Press}
 }
 
-@article{hintikka2021xylo,
+@article{Hintikka2021,
   title =	 {Xylo-Oligosaccharides in Prevention of Hepatic
                   Steatosis and Adipose Tissue Inflammation:
                   Associating Taxonomic and Metabolomic Patterns in
@@ -941,7 +939,7 @@
   publisher =	 {Multidisciplinary Digital Publishing Institute}
 }
 
-@article{huang2020treesummarizedexperiment,
+@article{Huang2020,
   title =	 {TreeSummarizedExperiment: a S4 class for data with
                   hierarchical structure},
   author =	 {Huang, Ruizhu and Soneson, Charlotte and Ernst,
@@ -954,7 +952,7 @@
   publisher =	 {Faculty of 1000 Ltd}
 }
 
-@Manual{hub2021,
+@Manual{Morgan2021,
   title =	 {ExperimentHub: Client to access ExperimentHub
                   resources},
   author =	 {Martin Morgan and Lori Shepherd},
@@ -962,7 +960,7 @@
   note =	 {R package version 2.2.0}
 }
 
-@Article{iheat2017,
+@Article{Schep2017,
   author =	 {Alicia N Schep and Sarah K Kummerfeld},
   title =	 {iheatmapr: Interactive complex heatmaps in R},
   year =	 2017,
@@ -971,7 +969,7 @@
   doi =		 {10.21105/joss.00359}
 }
 
-@InCollection{knitr2014,
+@InCollection{Stodden2014,
   booktitle =	 {Implementing Reproducible Computational Research},
   editor =	 {Victoria Stodden and Friedrich Leisch and Roger
                   D. Peng},
@@ -984,7 +982,7 @@
   url =		 {http://www.crcpress.com/product/isbn/9781466561595}
 }
 
-@Book{knitr2015,
+@Book{Xie2015,
   title =	 {Dynamic Documents with {R} and knitr},
   author =	 {Yihui Xie},
   publisher =	 {Chapman and Hall/CRC},
@@ -995,7 +993,7 @@
   url =		 {https://yihui.org/knitr/}
 }
 
-@Manual{lefser2021,
+@Manual{Khlebrodova2021,
   title =	 {lefser: R implementation of the LEfSE method for
                   microbiome biomarker discovery},
   author =	 {Asya Khleborodova},
@@ -1004,7 +1002,7 @@
   url =		 {https://github.com/waldronlab/lefser}
 }
 
-@Article{limma2015,
+@Article{Ritchie2015,
   author =	 {Matthew E Ritchie and Belinda Phipson and Di Wu and
                   Yifang Hu and Charity W Law and Wei Shi and Gordon K
                   Smyth},
@@ -1018,7 +1016,7 @@
   doi =		 {10.1093/nar/gkv007}
 }
 
-@article{linAnalysisCompositionsMicrobiomes2020,
+@article{Das2020,
   title =	 {Analysis of Compositions of Microbiomes with Bias
                   Correction},
   author =	 {Lin, Huang and Peddada, Shyamal Das},
@@ -1036,7 +1034,7 @@
                   microbiomes with bias .pdf}
 }
 
-@Manual{maaslin2020,
+@Manual{Mallick2020,
   title =	 {MaAsLin 2: Multivariable Association in
                   Population-scale Meta-omics Studies.},
   author =	 {Himel Mallick and Ali Rahnavard and Lauren
@@ -1046,7 +1044,7 @@
   url =		 {http://huttenhower.sph.harvard.edu/maaslin2},
 }
 
-@article{mandalAnalysisCompositionMicrobiomes2015,
+@article{Mandal2015,
   title =	 {Analysis of Composition of Microbiomes: A Novel
                   Method for Studying Microbial Composition},
   shorttitle =	 {Analysis of Composition of Microbiomes},
@@ -1108,18 +1106,17 @@
                   microbiomes a novel me.pdf}
 }
 
-@Article{metagenomeseq2017,
+@Article{Paulson2017,
   title =	 {Longitudinal differential abundance analysis of
                   marker-gene surveys using smoothing splines},
-  author =	 {Joseph N. Paulson* and Hisham Talukder* and Hector
-                  Corrada Bravo},
+  author =	 {JN Paulson and H Talukder and HC Bravo},
   year =	 2017,
   journal =	 {biorxiv},
   doi =		 {10.1101/099457},
   url =		 {https://www.biorxiv.org/content/10.1101/099457v1},
 }
 
-@Misc{miaSim2021,
+@Misc{Simsek2021,
   title =	 {miaSim R package},
   author =	 {Yagmur Simsek and Leo Lahti and Daniel Garza and
                   Karoline Faust},
@@ -1127,14 +1124,14 @@
   note =	 {Version 1.0.0}
 }
 
-@Manual{miaTime2021,
-  title =	 {miaTime: What the Package Does (Title Case)},
-  author =	 {Who wrote it},
+@Manual{Lahti2021,
+  title =	 {miaTime: time series analysis},
+  author =	 {L Lahti},
   year =	 2021,
   note =	 {R package version 0.1.0}
 }
 
-@Manual{miaviz2022,
+@Manual{Ernst2022,
   title =	 {miaViz: Microbiome Analysis Plotting and
                   Visualization},
   author =	 {Felix G.M. Ernst and Tuomas Borman and Leo Lahti},
@@ -1150,7 +1147,7 @@
   note =	 {R package version 1.2.0}
 }
 
-@techreport{nearingMicrobiomeDifferentialAbundance2021,
+@techreport{Nearing2021,
   type =	 {Preprint},
   title =	 {Microbiome Differential Abundance Methods Produce
                   Disturbingly Different Results across 38 Datasets},
@@ -1209,7 +1206,7 @@
   langid =	 {english}
 }
 
-@Manual{patchwork2022,
+@Manual{Pedersen2022,
   title =	 {patchwork: The Composer of Plots},
   author =	 {Thomas Lin Pedersen},
   year =	 2022,
@@ -1217,7 +1214,7 @@
                   https://github.com/thomasp85/patchwork}
 }
 
-@Article{philr2017,
+@Article{Silverman2017,
   title =	 {A phylogenetic transform enhances analysis of
                   compositional microbiota data},
   author =	 {Justin D Silverman and Alex D Washburne and Sayan
@@ -1229,7 +1226,7 @@
   url =		 {https://elifesciences.org/content/6/e21887}
 }
 
-@Book{plotly2020,
+@Book{Sievert2020,
   author =	 {Carson Sievert},
   title =	 {Interactive Web-Based Data Visualization with R,
                   plotly, and shiny},
@@ -1239,11 +1236,10 @@
   url =		 {https://plotly-r.com}
 }
 
-@article{quinnCritiqueDifferentialAbundance2021,
+@article{Quinn2021,
   title =	 {A {{Critique}} of {{Differential Abundance
                   Analysis}}, and {{Advocacy}} for an {{Alternative}}},
-  author =	 {Quinn, Thomas P. and {Gordon-Rodriguez}, Elliott and
-                  Erb, Ionas},
+  author =	 {Quinn, Thomas P. and Gordon-Rodriguez, Elliott and Erb, Ionas},
   year =	 2021,
   month =	 apr,
   journal =	 {arXiv:2104.07266 [q-bio, stat]},
@@ -1269,7 +1265,7 @@
   langid =	 {english}
 }
 
-@Book{rmarkdown2018,
+@Book{Xie2018,
   title =	 {R Markdown: The Definitive Guide},
   author =	 {Yihui Xie and J.J. Allaire and Garrett Grolemund},
   publisher =	 {Chapman and Hall/CRC},
@@ -1279,7 +1275,7 @@
   url =		 {https://bookdown.org/yihui/rmarkdown}
 }
 
-@Book{rmarkdown2020,
+@Book{Xie2020,
   title =	 {R Markdown Cookbook},
   author =	 {Yihui Xie and Christophe Dervieux and Emily
                   Riederer},
@@ -1290,7 +1286,7 @@
   url =		 {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
-@article{salosensaari2021taxonomic,
+@article{salosensaari2021,
   title =	 {Taxonomic signatures of cause-specific mortality
                   risk in human gut microbiome},
   author =	 {Salosensaari, Aaro and Laitinen, Ville and
@@ -1306,7 +1302,7 @@
   publisher =	 {Nature Publishing Group}
 }
 
-@Article{scater2017,
+@Article{McCarthy2017,
   author =	 {Davis J. McCarthy and Kieran R. Campbell and Aaron
                   T. L. Lun and Quin F. Willis},
   title =	 {Scater: pre-processing, quality control,
@@ -1320,7 +1316,7 @@
   doi =		 {10.1093/bioinformatics/btw777}
 }
 
-@article{sprockettMicrobiotaAssemblyStructure2020,
+@article{Sprockett2020,
   title =	 {Microbiota Assembly, Structure, and Dynamics among
                   {{Tsimane}} Horticulturalists of the {{Bolivian
                   Amazon}}},
@@ -1365,15 +1361,4 @@
                   {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett
                   et al. - 2020 - Microbiota assembly, structure, and
                   dynamics among.pdf}
-}
-
-@Book{xie2015,
-  title =	 {Dynamic Documents with {R} and knitr},
-  author =	 {Yihui Xie},
-  publisher =	 {Chapman and Hall/CRC},
-  address =	 {Boca Raton, Florida},
-  year =	 2015,
-  edition =	 {2nd},
-  note =	 {ISBN 978-1498716963},
-  url =		 {http://yihui.org/knitr/}
 }
