--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -40,7 +40,7 @@ experiment slot.
 As an example data, we use data from following publication: Hintikka L _et al._ (2021) 
 Xylo-oligosaccharides in prevention of hepatic steatosis and adipose tissue inflammation: 
 associating taxonomic and metabolomic patterns in fecal microbiotas with 
-biclustering [@hintikka2021xylo].
+biclustering [@Hintikka2021].
 
 In this article, mice were fed with high-fat and low-fat diets with or without prebiotics.
 The purpose of this was to study if prebiotics would reduce the negative impacts
