--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -23,31 +23,31 @@ group with disease *X* vs a healthy control group might lead to
 important insights into the pathophysiology. Changes in the microbiota
 might be causal or a consequence of the disease. Either way, it can
 help to understand the system as a whole. Be aware that this approach
-has also been criticized recently [@quinnCritiqueDifferentialAbundance2021].
+has also been criticized recently [@Quinn2021].
 
 
 ### Examples and tools
 
 There are many tools to perform DAA. The most popular tools, without going into
 evaluating whether or not they perform well for this task, are:  
-- ALDEx2 [@alde2016] 
+- ALDEx2 [@Gloor2016] 
 - ANCOMBC [@ancombc2020]
-- corncob [@corncob2021]
-- DESeq2 [@deseq2014] 
-- edgeR [@edger2016]
-- lefser [@lefser2021]
-- Maaslin2 [@maaslin2020]
-- metagenomeSeq [@metagenomeseq2017]
-- limma [@limma2015]
+- corncob [@Martin2021]
+- DESeq2 [@Love2014] 
+- edgeR [@Chen2016]
+- lefser [@Khlebrodova2021]
+- Maaslin2 [@Mallick2020]
+- metagenomeSeq [@Paulson2017]
+- limma [@Ritchie2015]
 - [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)  
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend to have a look at @nearingMicrobiomeDifferentialAbundance2021 who compared all these listed methods across 38
+We recommend to have a look at @Nearing2021 who compared all these listed methods across 38
 different datasets. Because different methods have different approaches
 (parametric vs non-parametric, different normalization techiniques etc.) to
 perform the same task (test differential abundance), results can differ between
-methods. Unfortunately, as @nearingMicrobiomeDifferentialAbundance2021 point out, they differ disturbingly
+methods. Unfortunately, as @Nearing2021 point out, they differ disturbingly
 much. Therefore, it is highly recommended to pick several methods to get an
 idea about how robust and potentially reproducible your findings are depending
 on the method. In this section we demonstrate 3 methods that can be recommended
@@ -90,7 +90,7 @@ set.seed(1)
 ### Prevalence Filtering 
 
 Before we jump to our analyses, we may want to perform prevalence filtering.
-@nearingMicrobiomeDifferentialAbundance2021 found that applying a 10% threshold for the prevalence of
+@Nearing2021 found that applying a 10% threshold for the prevalence of
 the taxa generally resulted in more robust results. Some tools have builtin
 arguments for that. By applying the threshold to our input data, we can make
 sure it is applied for all tools. Below we show how to do this in `mia`:
@@ -105,7 +105,7 @@ In this section, we will show how to perform a simple ALDEx2 analysis. If you
 would choose to pick a single method, this method could be recommended to use.
 According to the developers experience, it tends to identify the common
 features identified by other methods. This statement is in line with a recent
-independent evaluation by @nearingMicrobiomeDifferentialAbundance2021.  Please also have a look at
+independent evaluation by @Nearing2021.  Please also have a look at
 the more extensive [vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html) 
 that covers this flexible tool in more depth. ALDEx2 estimates technical
 variation within each sample per taxon by utilizing the Dirichlet distribution.
@@ -195,13 +195,13 @@ rownames_to_column(aldex_out, "genus") %>%
 ### ANCOM-BC
 
 The analysis of composition of microbiomes with bias correction 
-(ANCOM-BC) [@linAnalysisCompositionsMicrobiomes2020] 
+(ANCOM-BC) [@Das2020] 
 is a recently developed method for differential abundance testing. It is based
 on an 
-earlier published approach [@mandalAnalysisCompositionMicrobiomes2015]. 
+earlier published approach [@Mandal2015]. 
 The previous version of ANCOM was among the methods that produced the 
 most consistent results and is probably a conservative approach
-[@nearingMicrobiomeDifferentialAbundance2021]. 
+[@Nearing2021]. 
 However, the new ANCOM-BC method operates quite differently compared to the
 former ANCOM method.
 
@@ -468,7 +468,7 @@ vignette of package,  @fido2019)
 
 
 The following presents such an exemplary analysis based on the 
-data of @sprockettMicrobiotaAssemblyStructure2020 available
+data of @Sprockett2020 available
 through `microbiomeDataSets` package.
 
 
