--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -31,7 +31,7 @@ chapterPreamble()
 
 * [DataFrame](https://rdrr.io/bioc/S4Vectors/man/DataFrame-class.html) which behaves similarly to `data.frame`, yet efficient and fast when used with large datasets.
 * [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the Biostrings package [@R-Biostrings].
-* GenomicRanges ([@GenomicRanges2013]) offers an efficient representation and manipulation of genomic annotations and alignments, see e.g. `GRanges` and `GRangesList` at [An Introduction to the GenomicRangesPackage](https://bioconductor.org/packages/release/bioc/vignettes/GenomicRanges/inst/doc/GenomicRangesIntroduction.html).
+* GenomicRanges ([@Lawrence2013]) offers an efficient representation and manipulation of genomic annotations and alignments, see e.g. `GRanges` and `GRangesList` at [An Introduction to the GenomicRangesPackage](https://bioconductor.org/packages/release/bioc/vignettes/GenomicRanges/inst/doc/GenomicRangesIntroduction.html).
 
 [NGS Analysis Basics](http://girke.bioinformatics.ucr.edu/GEN242/tutorials/rsequences/rsequences/) provides a walk-through of the above-mentioned features with detailed examples.
 
@@ -47,7 +47,7 @@ each other.
 `assays` : This slot is similar to `otu_table` in `phyloseq`. In a
                `SummarizedExperiment` object multiple assays, raw
                counts, transformed counts can be stored. See also
-               [@MultiAssayExperiment2017]
+               [@Ramos2017]
                for storing data from multiple `experiments` such as
                RNASeq, Proteomics, etc.  `rowData` : This slot is
                similar to `tax_table` in `phyloseq` to store taxonomic
@@ -101,7 +101,7 @@ project [@Huber2015].
 
 Rmarkdown
 
-* Rmarkdown tips [@rmarkdown2020]
+* Rmarkdown tips [@Xie2020]
 
 
 RStudio
@@ -122,11 +122,11 @@ deployed in R/Bioconductor packages [@Huber2015].
 
 * Hervé Pagès, [A quick overview of the S4 class system](https://bioconductor.org/packages/release/bioc/vignettes/S4Vectors/inst/doc/S4QuickOverview.pdf).
 * Laurent Gatto, [A practical tutorial on S4 programming](https://bioconductor.org/help/course-materials/2013/CSAMA2013/friday/afternoon/S4-tutorial.pdf)
-* How S4 Methods Work [@chambers2006s4]
+* How S4 Methods Work [@Chambers2006]
 
 |   Books:
 
-* John M. Chambers. Software for Data Analysis: Programming with R. Springer, New York, 2008. ISBN-13 978-0387759357 [@chambers2008software]
+* John M. Chambers. Software for Data Analysis: Programming with R. Springer, New York, 2008. ISBN-13 978-0387759357 [@Chambers2008]
 * I Robert Gentleman. R Programming for Bioinformatics. Chapman & Hall/CRC, New York, 2008. ISBN-13 978-1420063677 [@gentleman2008r]
 
 
@@ -136,7 +136,7 @@ deployed in R/Bioconductor packages [@Huber2015].
 
 **Original article**
 -   Huang R _et al_. (2021) TreeSummarizedExperiment: a S4 class 
-for data with hierarchical structure. F1000Research 9:1246. [@huang2020treesummarizedexperiment]
+for data with hierarchical structure. F1000Research 9:1246. [@Huang2020]
 
 **Reference Sequence slot extension**
 - Lahti L _et al_. (2020) [Upgrading the R/Bioconductor ecosystem for microbiome 
