--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -247,6 +247,148 @@ As a final note, `mia` provides functions for the evaluation of additional dissi
 * `calculateOverlap`, `runOverlap` ()
 * `calculateDPCoA`, `runDPCoA` (Double Principal Coordinate Analysis)
 
+Redundancy analysis is similar to PCA, however, it takes into account covariates. 
+It aims to maximize the variance in respect of covariates. The results shows how much
+each covariate affects.
+
+```{r microbiome_RDA1}
+# Load required packages
+if(!require("vegan")){
+    install.packages("vegan")
+    library("vegan")
+}
+if(!require("stringr")){
+    install.packages("stringr")
+    library("stringr")
+}
+if(!require("knitr")){
+    install.packages("knitr")
+    library("knitr")
+}
+# Load data
+data(enterotype)
+tse <- enterotype
+# Covariates that are being analyzed
+variable_names <- c("ClinicalStatus", "Gender", "Age")
+
+# Apply relative transform
+tse <- transformSamples(tse, method = "relabundance")
+
+# Get assay
+assay <- t(assay(tse, "relabundance"))
+# Get colData
+coldata <- colData(tse)
+
+# Create a formula
+formula <- as.formula(paste0("assay ~ ", str_c(variable_names, collapse = " + ")) )
+
+# # Perform RDA
+rda <- rda(formula, data = coldata, scale = TRUE, na.action = na.exclude)
+
+# Initialize list for p-values
+rda_info <- list()
+# Name for storing the result
+variable_name <- "all"
+# Calculate and store p-value, and other information
+rda_info[[variable_name]] <- c(constrained = rda$CCA$tot.chi, 
+                               unconstrainded = rda$CA$tot.chi, 
+                               proportion = rda$CCA$tot.chi/rda$CA$tot.chi, 
+                               p_value = anova.cca(rda)["Model", "Pr(>F)"] )
+
+# Loop through variables
+permutations <- 999
+for( variable_name in variable_names ){
+    # Create a formula
+    formula <- as.formula(paste0("assay ~ ", variable_name) )
+    # Perform RDA
+    rda_temp <- rda(formula, data = coldata, scale = TRUE, na.action = na.exclude)
+    # Add Info to list
+    rda_info[[variable_name]] <- c(constrained = rda_temp$CCA$tot.chi, 
+                                   unconstrainded = rda_temp$CA$tot.chi, 
+                                   proportion = rda_temp$CCA$tot.chi/rda$CA$tot.chi, 
+                                   p_value = anova.cca(rda_temp, permutations = permutations
+                                                       )["Model", "Pr(>F)"] )
+}  
+# Convert into data.frame
+rda_info <- t(as.data.frame(rda_info))
+rda_info_clean <- rda_info
+# Adjust names
+colnames(rda_info_clean) <- 
+    c("Explained by variables", "Unexplained by variables", "Proportion expl by vars", 
+      paste0("P-value (PERMANOVA ", permutations, " permutations)") )
+# Print info
+kable(rda_info_clean, caption = paste0("RDA results for ", names(mae)[[1]], " data") )
+```
+
+```{r microbiome_RDA2}
+# Load ggord for plotting
+if(!require("ggord")){
+    install.packages("ggord")
+    library("ggord")
+}
+if(!require("ggplot2")){
+    install.packages("ggplot2")
+    library("ggplot2")
+}
+# Since na.exclude was used, if there were rows missing information, they were 
+# dropped off. Subset coldata so that it matches with rda.
+coldata <- coldata[ rownames(rda$CCA$wa), ]
+
+# Adjust names
+# Get labels of vectors
+vec_lab_old <- rownames(rda$CCA$biplot)
+
+# Loop through vector labels
+vec_lab <- sapply(vec_lab_old, FUN = function(name){
+    # Get the variable name
+    variable_name <- variable_names[ str_detect(name, variable_names) ]
+    # If the vector label includes also group name
+    if( !any(name %in% variable_names) ){
+        # Get the group names
+        group_name <- unique( coldata[[variable_name]] )[ 
+        which( paste0(variable_name, unique( coldata[[variable_name]] )) == name ) ]
+        # Modify vector so that group is separated from variable name
+        new_name <- paste0(variable_name, " \U2012 ", group_name)
+    } else{
+        new_name <- name
+    }
+    # Add percentage how much this variable explains, and p-value
+    new_name <- expr(paste(!!new_name, " (", 
+                           !!format(round( rda_info[variable_name, "proportion"]*100, 1), nsmall = 1), 
+                           "%, ",italic("P"), " = ", 
+                           !!gsub("0\\.","\\.", format(round( rda_info[variable_name, "p_value"], 3), 
+                                                       nsmall = 3)), ")"))
+
+    return(new_name)
+})
+# Add names
+names(vec_lab) <- vec_lab_old
+
+# Create labels for axis
+xlab <- paste0("RDA1 (", format(round( rda$CCA$eig[[1]]/rda$CCA$tot.chi*100, 1), nsmall = 1 ), "%)")
+ylab <- paste0("RDA2 (", format(round( rda$CCA$eig[[2]]/rda$CCA$tot.chi*100, 1), nsmall = 1 ), "%)")
+
+# Create a plot        
+plot <- ggord(rda, grp_in = coldata[["ClinicalStatus"]], vec_lab = vec_lab,
+              alpha = 0.5,
+              size = 4, addsize = -4,
+              #ext= 0.7, 
+              txt = 3.5, repel = TRUE, 
+              #coord_fix = FALSE
+          ) + 
+    # Adjust titles and labels
+    guides(colour = guide_legend("ClinicalStatus"),
+           fill = guide_legend("ClinicalStatus"),
+           group = guide_legend("ClinicalStatus"),
+           shape = guide_legend("ClinicalStatus"),
+           x = guide_axis(xlab),
+           y = guide_axis(ylab)) +
+    theme( axis.title = element_text(size = 10) )
+plot
+```
+
+From RDA plto, we can see that only age has significant affect on microbial profile. 
+
 ## Visualizing the most dominant genus on PCoA
 
 In this section we visualize most dominant genus on PCoA. A similar visualization was proposed in [Taxonomic signatures of cause-specific mortality risk in human gut microbiome](https://www.nature.com/articles/s41467-021-22962-y), Salosensaari et al. (2021).
