--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -317,7 +317,7 @@ colnames(rda_info_clean) <-
     c("Explained by variables", "Unexplained by variables", "Proportion expl by vars", 
       paste0("P-value (PERMANOVA ", permutations, " permutations)") )
 # Print info
-kable(rda_info_clean, caption = paste0("RDA results for ", names(mae)[[1]], " data") )
+kable(rda_info_clean, caption = "RDA results" )
 ```
 
 ```{r microbiome_RDA2}
