--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -323,7 +323,11 @@ kable(rda_info_clean, caption = "RDA results" )
 ```{r microbiome_RDA2}
 # Load ggord for plotting
 if(!require("ggord")){
-    install.packages("ggord")
+    if(!require("devtools")){
+        install.packages("devtools")
+        library("devtools")
+    }
+    install_github("https://github.com/fawda123/ggord/")
     library("ggord")
 }
 if(!require("ggplot2")){
