--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -267,17 +267,16 @@ if(!require("knitr")){
 }
 # Load data
 data(enterotype)
-tse <- enterotype
 # Covariates that are being analyzed
 variable_names <- c("ClinicalStatus", "Gender", "Age")
 
 # Apply relative transform
-tse <- transformSamples(tse, method = "relabundance")
+enterotype <- transformSamples(enterotype, method = "relabundance")
 
 # Get assay
-assay <- t(assay(tse, "relabundance"))
+assay <- t(assay(enterotype, "relabundance"))
 # Get colData
-coldata <- colData(tse)
+coldata <- colData(enterotype)
 
 # Create a formula
 formula <- as.formula(paste0("assay ~ ", str_c(variable_names, collapse = " + ")) )
