--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -316,7 +316,7 @@ colnames(rda_info_clean) <-
     c("Explained by variables", "Unexplained by variables", "Proportion expl by vars", 
       paste0("P-value (PERMANOVA ", permutations, " permutations)") )
 # Print info
-kable(rda_info_clean, caption = "RDA results" )
+kable(rda_info_clean, caption = "Results" )
 ```
 
 ```{r microbiome_RDA2}
@@ -475,7 +475,6 @@ plotReducedDim(tse_Genus[,colData(tse_Genus)$Group==FALSE],
        y=paste("PC 2 (",round(var_explained[2],1),"%)"),
        title = "Group = FALSE", color="")
 ```
-
 
 
 
