--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -316,7 +316,7 @@ colnames(rda_info_clean) <-
     c("Explained by variables", "Unexplained by variables", "Proportion expl by vars", 
       paste0("P-value (PERMANOVA ", permutations, " permutations)") )
 # Print info
-kable(rda_info_clean, caption = "Results" )
+kable(rda_info_clean)
 ```
 
 ```{r microbiome_RDA2}
