--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -150,7 +150,7 @@ functions.
 
 ```{r runMDS, message=FALSE}
 library(scater)
-tse <- runMDS(tse, FUN = vegan::vegdist, name = "PCoA_BC", exprs_values = "counts")
+tse <- runMDS(tse, FUN = vegan::vegdist, method = "bray", name = "PCoA_BC", exprs_values = "counts")
 ```
 
 Sample similarities can be visualized on a lower-dimensional display
