--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -341,9 +341,9 @@ format. Here, we provide examples for common formats.
 counts  <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
 tax     <- read.csv(tax_file)     # Taxonomy table (to rowData)
 samples <- read.csv(sample_file)  # Sample data (to colData)
-se <- SummarizedExperiment(assays = list(counts = counts),
-                           colData = samples,
-                           rowData = tax)
+tse <- TreeSummarizedExperiment(assays = list(counts = counts),
+                                colData = samples,
+                                rowData = tax)
 ```
 
 Specific import functions are provided for:
@@ -482,6 +482,9 @@ The current data object, se, is a SummarizedExperiment object. This
 does not include a slot for adding a phylogenetic tree. In order to do
 this, we can convert the SE object to an extended TreeSummarizedExperiment
 object which includes also a `rowTree` slot.
+
+TreeSummarizedExperiment contains also other additional slots and features which
+is why we recommend to use `TreeSE`.
 
 ```{r}
 tse <- as(se, "TreeSummarizedExperiment")
