--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -284,7 +284,7 @@ From the plots, we can see that there is low negative correlation in both cluste
 This means that when abundance of bacteria belonging to cluster 1 or 3 is higher, 
 the concentration of metabolites of cluster 1 or 3 is lower, and vice versa. 
 
-```{r biclust_6, fig.width=14, fig.height=6, eval=FALSE}
+```{r biclust_6, fig.width=14, fig.height=6, eval=TRUE}
 pics <- list()
 
 i <- 0
