--- a/90_acknowledgments.Rmd
+++ b/90_acknowledgments.Rmd
@@ -7,11 +7,11 @@ chapterPreamble()
 ```
 
 This work would not have been possible without the countless
-contributions and interactions within the broader research
-community. We express our gratitude to the entire Bioconductor
-community for developing this high-quality open research software
-repository for life science analytics, continuously pushing the limits
-in emerging application fields [@Gentleman2004, @Huber2015].
+contributions and interactions with other researchers, developers, and
+users. We express our gratitude to the entire Bioconductor community
+for developing this high-quality open research software repository for
+life science analytics, continuously pushing the limits in emerging
+fields [@Gentleman2004, @Huber2015].
 
 The base ecosystem of data containers, packages, and tutorials was set
 up as a collaborative effort by Tuomas Borman, Henrik Eckermann,
@@ -23,17 +23,18 @@ Human Microbiome Studies
 ([ML4microbiome](https://www.ml4microbiome.eu/))
 [@MorenoIndias2021]. The framework is based on the
 _TreeSummarizedExperiment_ data container created by Ruizhu Huang and
-others [@R-TreeSummarizedExperiment]. The idea of using this container
-as a new basis for microbiome data science was initially advanced by
-the groundwork of Domenick Braccia, Héctor Corrada Bravo and others,
-and brought together with other microbiome data science developers
-[@Shetty2019].
+others [@R-TreeSummarizedExperiment], and on the MultiAssayExperiment
+by Marcel Ramos et al. [@MultiAssayExperiment2017]. The idea of using
+these containers as a basis for microbiome data science was initially
+advanced by the groundwork of Domenick Braccia, Héctor Corrada Bravo
+and others, and subsequently brought together with other microbiome
+data science developers [@Shetty2019].
 
 Ample demonstration data resources have been made available as the
 [curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData/)
 project by Edoardo Pasolli, Lucas Schiffer, Levi Waldron and others
-[@Pasolli2017] adding important early support for the emerging
-framework. A number of other contributors have advanced the ecosystem
+[@Pasolli2017] adding important support.
+A number of other contributors have advanced the ecosystem
 further, and will be acknowledged in the individual
 packages, [pull
 requests](https://github.com/microbiome/OMA/graphs/contributors),
@@ -43,8 +44,8 @@ The work has drawn inspiration from many sources, most notably from
 the work on _phyloseq_ by Paul McMurdie and Susan Holmes
 [@McMurdie2013] who pioneered the work on rigorous and reproducible
 microbiome data science ecosystems in R/Bioconductor. The phyloseq
-framework continues to provide a strong complementary set of packages
-and methods for microbiome studies, and we do our best to support full
+framework continues to provide a vast array of complementary packages
+and methods for microbiome studies, and we aim to support full
 interoperability.
 
 The open source books by Susan Holmes and Wolfgang Huber, Modern
@@ -61,8 +62,4 @@ of single cell sequencing studies. Many approaches used in this book
 have been derived from the [OSCA
 framework](https://bioconductor.org/books/release/OSCA/), with various
 adjustments and extensions dedicated to microbiome data science.
-
-
-
-
 
