Replace genes with features

--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -427,7 +427,7 @@ metadata(tse_phylum_subset)$anno_colors$SampleType <- c(Feces = "blue",
 
 # Create a plot
 sechm(tse_phylum_subset, 
-      genes = rownames(tse_phylum_subset), 
+      features = rownames(tse_phylum_subset), 
       assayName = "clr", 
       do.scale = TRUE, 
       top_annotation = c("SampleType"), 
