--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -25,6 +25,7 @@ chapterPreamble()
  * TreeSummarizedExperiment [@R-TreeSummarizedExperiment]
    + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/TreeSummarizedExperiment/inst/doc/Introduction_to_treeSummarizedExperiment.html)
    + [Project page](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
+   + Publication: [@Huang2021]
    
 
 ### Other relevant containers
