--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,42 @@
+
+
+
+
+
+
+
+@Article{Huang2021,
+  author =	 {Ruizhu Huang and Charlotte Soneson and Felix
+                  G.M. Ernst and others},
+  title =	 {TreeSummarizedExperiment: a S4 class for data with
+                  hierarchical structure [version 2; peer review: 3
+                  approved]},
+  journal =	 {F1000Research},
+  volume =	 9,
+  pages =	 1246,
+  doi =		 {https://doi.org/10.12688/f1000research.26669.2},
+  year =	 2021,
+  annote =	 {TreeSE reference},
+  keywords =	 {bioscience}
+}
+
+
+@Article{Quast2013,
+  author =	 {Quast, C and Pruesse, E and Yilmaz, P and Gerken, J
+                  and Schweer, T and Yarza, P and Peplies, J and
+                  Glöckner, FO},
+  title =	 {The SILVA ribosomal RNA gene database project:
+                  improved data processing and web-based tools},
+  journal =	 {Nucleic Acids Research},
+  volume =	 41,
+  issue =	 {D1},
+  pages =	 D590-D596,
+  year =	 2013,
+  annote =	 {SILVA database reference},
+  keywords =	 {bioscience}
+}
+
+
 @Article{MorenoIndias2021,
   author =	 {Isabel Moreno-Indias and Leo Lahti and Miroslava
                   Nedyalkova and Ilze Elbere and Gennady
@@ -97,7 +136,7 @@
 }
 
 
-@Article{Callahan2016,
+@Article{Callahan2016workflow,
   author =	 {Ben J. Callahan and Kris Sankaran and Julia
                   A. Fukuyama and Paul J. McMurdie and Susan
                   P. Holmes},
@@ -554,12 +593,26 @@ Bioconductor},
 }
 
 @Manual{R-dada2,
-    title = {dada2: Accurate, high-resolution sample inference from amplicon
-    sequencing data},
-    author = {Benjamin Callahan and Paul McMurdie and Susan Holmes},
-    year = {2020},
-    note = {R package version 1.18.0},
-    url = {http://benjjneb.github.io/dada2/},
+  title =	 {dada2: Accurate, high-resolution sample inference
+                  from amplicon sequencing data},
+  author =	 {Benjamin Callahan and Paul McMurdie and Susan
+                  Holmes},
+  year =	 2020,
+  note =	 {R package version 1.18.0},
+  url =		 {http://benjjneb.github.io/dada2/},
+}
+
+@Article{Callahan2016dada2,
+  title =	 {DADA2: High-resolution sample inference from
+                  Illumina amplicon data},
+  author =	 {Benjamin J Callahan and Paul J McMurdie and Michael
+                  J Rosen and Andrew W Han and Amy Jo A Johnson and
+                  Susan P Holmes},
+  journal =	 {Nature Methods},
+  volume =	 13,
+  pages =	 {581-583},
+  year =	 2016,
+  doi =		 {10.1038/nmeth.3869},
 }
 
 @Manual{R-ggpubr,
@@ -727,15 +780,7 @@ Bioconductor},
     url = {https://github.com/rstudio/bookdown},
 }
 
-@Article{dada22016,
-    title = {DADA2: High-resolution sample inference from Illumina amplicon data},
-    author = {Benjamin J Callahan and Paul J McMurdie and Michael J Rosen and Andrew W Han and Amy Jo A Johnson and Susan P Holmes},
-    journal = {Nature Methods},
-    volume = {13},
-    pages = {581-583},
-    year = {2016},
-    doi = {10.1038/nmeth.3869},
-}
+
 
 @InCollection{knitr2014,
     booktitle = {Implementing Reproducible Computational Research},
