Importing csv data format

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -293,6 +293,7 @@ Convert data into right format and create _TreeSE_ object.
 ```{r dada2_4}
 # Create a list that contains assays
 counts <- t(seqtab.nochim)
+counts <- as.matrix(counts)
 assays <- SimpleList(counts = counts)
 
 # Convert colData and rowData into DataFrame
@@ -341,7 +342,20 @@ format. Here, we provide examples for common formats.
 counts  <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
 tax     <- read.csv(tax_file)     # Taxonomy table (to rowData)
 samples <- read.csv(sample_file)  # Sample data (to colData)
-tse <- TreeSummarizedExperiment(assays = list(counts = counts),
+
+# Ensure that the data is in correct format
+
+# counts should be in matrix format
+counts <- as.matrix(counts)
+# And it should be added to a SimpleList
+assays <-  SimpleList(counts = counts)
+
+# colData and rowData should be in DataFrame format
+colData <- DataFrame(colData)
+rowData <- DataFrame(rowData)
+
+# Create a TreeSE
+tse <- TreeSummarizedExperiment(assays = assays,
                                 colData = samples,
                                 rowData = tax)
 ```
