--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -290,6 +290,27 @@ tse_genus_sub <- tse_genus_sub[rowSums(assay(tse_genus_sub, "counts")) > 0, ]
 tse_genus_sub
 ```
 
+### Splitting
+
+You can split data base on variables. There are available functions `splitByRanks` 
+and `splitOn`.
+
+`splitByRanks` splits the data based on rank. Since the elements of the output list
+share columns, they can be stored into `altExp`. 
+
+```{r splitbyRanks}
+altExps(tse) <- splitByRanks(tse)
+altExps(tse)
+```
+
+If you want to split the data based on other variable than taxonomy rank, use 
+`splitOn`. It works for row-wise and column-wise splitting.
+
+```{r splitOn}
+splitOn(tse, "SampleType")
+```
+
+
 ### Additional functions
 * [mapTaxonomy](https://microbiome.github.io/mia/reference/taxonomy-methods.html)
 * [mergeRows/mergeCols](https://microbiome.github.io/mia/reference/merge-methods.html)
