--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -150,7 +150,11 @@ functions.
 
 ```{r runMDS, message=FALSE}
 library(scater)
-tse <- runMDS(tse, FUN = vegan::vegdist, method = "bray", name = "PCoA_BC", exprs_values = "counts")
+
+# Bray-Curtis is usually applied to relative abundances
+tse <- transformSamples(tse, method = "relabundance")
+# Perform PCoA
+tse <- runMDS(tse, FUN = vegan::vegdist, method = "bray", name = "PCoA_BC", exprs_values = "relabundance")
 ```
 
 Sample similarities can be visualized on a lower-dimensional display
