--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -394,7 +394,7 @@ plot <- ggord(rda, grp_in = coldata[["ClinicalStatus"]], vec_lab = vec_lab,
 plot
 ```
 
-From RDA plto, we can see that only age has significant affect on microbial profile. 
+From RDA plot, we can see that only age has significant affect on microbial profile. 
 
 ## Visualizing the most dominant genus on PCoA
 
